--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/guava-13.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.core.commands_3.6.1.v20120521-2329.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.equinox.common_3.6.100.v20120522-1841.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.jface_3.8.0.v20120521-2329.jar" sourcepath="/home/kamichidu/documents/sources/java/lib/jsugar/reference/org.eclipse.jface.source_3.8.0.v20120521-2329.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.osgi_3.8.0.v20120529-1548.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.ui.workbench_3.103.0.v20120530-1824.jar"/>
+	<classpathentry kind="lib" path="lib/swt-debug.jar" sourcepath="/home/kamichidu/documents/sources/java/lib/jsugar/reference/org.eclipse.swt.gtk.linux.x86_64.source_3.100.0.v4233d.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
