--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/org.eclipse.osgi_3.8.0.v20120529-1548.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.ui.workbench_3.103.0.v20120530-1824.jar"/>
 	<classpathentry kind="lib" path="lib/swt-debug.jar" sourcepath="/home/kamichidu/documents/sources/java/lib/jsugar/reference/org.eclipse.swt.gtk.linux.x86_64.source_3.100.0.v4233d.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar" sourcepath="reference/commons-lang3-3.1-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
